--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip 
           pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-          pip install -r requirements.txt
+          pip install -r api_yamdb/requirements.txt
 
       - name: Test with flake8 and django tests
         run: |
@@ -43,8 +43,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
-          context: ./api_yamdb
-          file: Dockerfile
+          context: api_yamdb/
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
   deploy:
