--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -47,6 +47,9 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
   deploy:
+    on:
+      push:
+        branches: master
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
     steps:
@@ -67,6 +70,7 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+            echo SECRET_KEY${{ secrets.SECRET_KEY }} >> .env
             sudo docker-compose up -d
   send_message:
     runs-on: ubuntu-latest
