--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -47,11 +47,9 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
   deploy:
-    on:
-      push:
-        branches: master
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
