--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -19,7 +19,9 @@ jobs:
           pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
           pip install -r api_yamdb/requirements.txt
 
-      - name: Test with flake8 and django tests
+      - name: Test with flake8, pytest and django tests
+        env:
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
         run: |
           python -m flake8
           pytest
@@ -68,7 +70,7 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            echo SECRET_KEY${{ secrets.SECRET_KEY }} >> .env
+            echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
             sudo docker-compose up -d
   send_message:
     runs-on: ubuntu-latest
